[metadata]
name = SBbadger
version = 0.1.0
author = Michael Kochen, Herbert Sauro
author_email = kochenma@uw.edu
description = Synthetic biochemical reaction networks with definable degree distributions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sys-bio/SBbadger
project_urls =
    Bug Tracker = https://github.com/sys-bio/SBbadger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = SBbadger
packages = find:
python_requires = >=3.6

[options.packages.find]
where = SBbadger